welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:4: error: not found: value <
			case (a<b ) => return true;
                               ^inOrderEqual:9: error: not found: value ≤
			case (a≤b ) => return true;
                               ^